--- a/index.html
+++ b/index.html
@@ -2317,7 +2317,7 @@
 
 											<div class="wpr-button-wrap elementor-clearfix">
 												<a class="wpr-button wpr-button-effect wpr-button-none" data-text="Go"
-													href="https://www.dextools.io/">
+													href="https://www.dextools.io/app/en/solana/pair-explorer/9QgQj8WJkFefVZ1gDsXB3vnoqf1fMbGMJBg9qtz7pump?t=1757869192496">
 
 													<span class="wpr-button-content">
 														<span class="wpr-button-text">Dextools</span>
